...
                          ] else
                            const Text('No addresses available'),
                        ],
                      ),
                    )
                    : ListView.builder(
                      key: const Key('asset_addresses_list'),
                      itemCount: pubkeys.keys.length,
                      itemBuilder:
                          (context, index) => ListTile(
                            leading: Text(index.toString()),
                            title: Text(
                              pubkeys.keys[index].toJson().toJsonString(),
...
